message C2R_Login // IRequest
{
	required string	Account	 = 1;	// 帐号
	required string	Password = 2;	// 密码
}

message R2C_Login // IResponse
{
	required string Address = 1;
	required int64 	Key	    = 2;
}

message C2G_LoginGate // IRequest
{
	required int64 Key = 1;	// 帐号
}

message G2C_LoginGate // IResponse
{
	required int64 PlayerId = 1;
	required long UserId = 2;
}

message G2C_TestHotfixMessage // IMessage
{
	required string Info = 1;
}

message C2M_TestActorRequest // IActorRequest
{
	required string Info = 1;
}

message M2C_TestActorResponse // IActorResponse
{
	required string Info = 1;
}

message PlayerInfo // IMessage
{
}

message C2G_PlayerInfo // IRequest
{
}

message G2C_PlayerInfo // IResponse
{
	repeated PlayerInfo PlayerInfos = 1;
}

message C2G_GetUserInfo // IRequest
{
    required long UserID = 1;
}

message G2C_GetUserInfo // IResponse
{
    required string NickName = 1;
    required int Wins = 2;
    required int Loses = 3;
    required long Gold = 4;
}

message C2G_StartMatch // IRequest
{
}

message G2C_StartMatch // IResponse
{
}

#region Map-Client

message GamerInfo
{
    required long UserID = 1;
    required bool IsReady = 2;
}

message M2C_GamerEnterRoom // IActorMessage
{
    repeated GamerInfo Gamers = 1;
}

#endregion